--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,40 +1,41 @@
-name: Flutter CI
+name: Flutter CI and Release
 
-# 创建触发打包条件：只要推送tag，就会触发版本打包
-
+# 创建触发打包条件：只要推送 tag，就会触发版本打包
 on:
   push:
     tags:
       - v*
-    
+
 jobs:
   build:
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
     
-    # Setup Java environment in order to build the Android app.
+    # Checkout the repository
     - uses: actions/checkout@v1
       with:
-    # 使用office分支的代码
         path: office
+    
+    # Setup Java environment in order to build the Android app.
     - uses: actions/setup-java@v1
       with:
         java-version: '17.x'
     
-    # Setup the flutter environment.
+    # Setup the Flutter environment.
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
-        # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
-    # Get flutter dependencies.
-    - run: flutter pub get    
-    # Build apk
-    - run: flutter build apk --target-platform android-arm
-    # 发包
+    # Get Flutter dependencies.
+    - run: flutter pub get
+    
+    # Build APK using debug signature
+    - run: flutter build apk --release --target-platform android-arm --no-shrink
+    
+    # Release APK
     - name: Release apk
       uses: ncipollo/release-action@v1.5.0
       with:
         artifacts: "build/app/outputs/apk/release/*.apk"
-        token: $
+        token: ${{ secrets.GITHUB_TOKEN }}
