--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -5,6 +5,15 @@ on:
   push:
     tags:
       - v*
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
+
 
 jobs:
   build:
