--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   responsive_framework: ^1.5.1
+  meta: ^1.15.0
   dartssh2:
     git:
       url: https://github.com/lollipopkit/dartssh2
